<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>passwordCreate</class>
 <widget class="QDialog" name="passwordCreate">
  <property name="windowModality">
   <enum>Qt::NonModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>761</width>
    <height>259</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Create your password</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_2">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_15" stretch="0">
     <property name="sizeConstraint">
      <enum>QLayout::SetDefaultConstraint</enum>
     </property>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="tipsLbl">
           <property name="text">
            <string>密碼提示：</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLineEdit" name="tipsLineedit"/>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
            <string>請輸入密碼：</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLineEdit" name="passwdLineedit">
           <property name="text">
            <string/>
           </property>
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="showPasswd">
           <property name="text">
            <string>顯示密碼</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="confirmBtn">
           <property name="text">
            <string>確認</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
